# Dynamic_Belt_Position_upgraded

./: .gitignore  README-WEB.md  README.md  inspect_excel.py  mock_master.csv  pyproject.toml  requirements.txt  vercel.json
frontend/src/app/: page.tsx
frontend/src/app/api/process/: route.ts
src/belt_position/: main.py
src/belt_position/algorithm/belt_position/: calculate_raw_metrics.py  clean_edge_points.py  detect_edges.py  ensure_consistent_direction.py  estimate_belt_position.py  fit_edge_line.py
src/belt_position/algorithm/data_cleaning/: clean_frame_data.py  process_speckles.py  remove_outlier_frames.py
src/belt_position/algorithm/signal_processing/: interpolate_belt_position.py  merge_belt_and_chest_data.py  trim_channels.py
src/belt_position/algorithm/units/: resolve_pressure.py
src/belt_position/algorithm/visualization/: animate_estimated_belt_position.py
src/belt_position/algorithm/workflow/: driver.py
src/belt_position/config/: settings.py
src/belt_position/services/: cleanup.py  exceptions.py  logging_service.py  sanitize_data.py
src/belt_position/services/data_loading/: discover_data.py  load_data.py  merge_baseline_frame_data.py
src/web_api/: api.py  process_data.py
