[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-belt-position"
version = "0.1.0"
description = "Dynamic belt position calculation pipeline"
readme = "README.md"
authors = [
    {name = "Arundhati Avinash Dange", email = "adange@iihs.org"},
]
requires-python = ">=3.11"

dependencies = [
    "pandas==2.3.3",
    "numpy==2.4.1",
    "scikit-learn==1.8.0",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "plotly==6.5.0",
    "ImageIO==2.37.2",
    "imageio-ffmpeg==0.6.0",
    "openpyxl==3.1.5",
    "scipy==1.16.3"
]

[project.scripts]
belt-position = "belt_position.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
